# detective

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: main.rs
src/juju/: mod.rs  trace_function.py
