[package]
name = "detective"
version = "0.1.0"
edition = "2021"
description = "Detective is an application tracer which currently supports tracing Juju applications."
license = "Apache-2.0"
repository = "https://github.com/neppel/detective"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.112"
regex = "1.10.3"
tokio = { version = "1.35.1", features = ["full"] }
